# kurento-media-server

./: CMakeLists.txt
scaffold/: CMakeLists_root.txt.template
server/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp  ServerMethods.cpp  death_handler.cpp  main.cpp
server/transport/: CMakeLists.txt
server/transport/websocket/: CMakeLists.txt  WebSocketRegistrar.cpp  WebSocketRegistrar.hpp  WebSocketTransport.cpp
